--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <script type="module" src="./../models/ListChosen.js"></script>
-    <script type="module" src="./../models/ChoseItem.js"></script>
-    <script type="module" src="./../utils/callData.js"></script>
-    <script type="module" src="./../controllers/main.js"></script>
+    <script type="module" src="./models/ListChosen.js"></script>
+    <script type="module" src="./models/ChoseItem.js"></script>
+    <script type="module" src="./utils/callData.js"></script>
+    <script type="module" src="./controllers/main.js"></script>
   </body>
 </html>
